Adding shaders to webgl idiom

--- a/xss/production/test/webgl_particle.html
+++ b/xss/production/test/webgl_particle.html
@@ -141,23 +141,23 @@ var p_mat1;var p_mat2;var p_mat3;var p_mat4;var p_mat5;var camera_1;var __fly_co
 threejs_load_resources(manager, function()
 {
 p_mat1 = new THREE.ParticleBasicMaterial({
-map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/sprites/snowflake1.png').asset),transparent:true,blending:additive_blending,depthTest:false,size:10
+map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/sprites/snowflake1.png').asset),transparent:true,blending:additive_blending,depthTest:false,size:10,
 	});
 p_mat1.manager = manager;
 p_mat2 = new THREE.ParticleBasicMaterial({
-map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/sprites/snowflake2.png').asset),transparent:true,blending:additive_blending,depthTest:false,size:20
+map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/sprites/snowflake2.png').asset),transparent:true,blending:additive_blending,depthTest:false,size:20,
 	});
 p_mat2.manager = manager;
 p_mat3 = new THREE.ParticleBasicMaterial({
-map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/sprites/snowflake3.png').asset),transparent:true,blending:additive_blending,depthTest:false,size:15
+map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/sprites/snowflake3.png').asset),transparent:true,blending:additive_blending,depthTest:false,size:15,
 	});
 p_mat3.manager = manager;
 p_mat4 = new THREE.ParticleBasicMaterial({
-map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/sprites/snowflake4.png').asset),transparent:true,blending:additive_blending,depthTest:false,size:5
+map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/sprites/snowflake4.png').asset),transparent:true,blending:additive_blending,depthTest:false,size:5,
 	});
 p_mat4.manager = manager;
 p_mat5 = new THREE.ParticleBasicMaterial({
-map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/sprites/snowflake5.png').asset),transparent:true,blending:additive_blending,depthTest:false,size:8
+map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/sprites/snowflake5.png').asset),transparent:true,blending:additive_blending,depthTest:false,size:8,
 	});
 p_mat5.manager = manager;
 		    camera_1 = 
