--- a/xss/production/test/wgl_firstperson.html
+++ b/xss/production/test/wgl_firstperson.html
@@ -58,31 +58,31 @@ var material_sphere1;var material_sphere2;var material_wireframe;var cylinder_ma
 threejs_load_resources(manager, function()
 {
 material_sphere1 = new THREE.MeshLambertMaterial({
-color:Math.random() * 0xffffff,shading:flat_shading
+color:Math.random() * 0xffffff,shading:flat_shading,
 	});
 material_sphere1.manager = manager;
 material_sphere2 = new THREE.MeshLambertMaterial({
-color:Math.random() * 0xffffff,shading:flat_shading
+color:Math.random() * 0xffffff,shading:flat_shading,
 	});
 material_sphere2.manager = manager;
 material_wireframe = new THREE.MeshLambertMaterial({
-color:MediumSlateBlue,wireframe:true
+color:MediumSlateBlue,wireframe:true,
 	});
 material_wireframe.manager = manager;
 cylinder_material = new THREE.MeshLambertMaterial({
-color:Math.random() * 0xffffff,shading:flat_shading
+color:Math.random() * 0xffffff,shading:flat_shading,
 	});
 cylinder_material.manager = manager;
 cylinder1_material = new THREE.MeshLambertMaterial({
-color:Math.random() * 0xffffff,shading:flat_shading
+color:Math.random() * 0xffffff,shading:flat_shading,
 	});
 cylinder1_material.manager = manager;
 cube_material = new THREE.MeshLambertMaterial({
-color:Math.random() * 0xffffff,shading:flat_shading
+color:Math.random() * 0xffffff,shading:flat_shading,
 	});
 cube_material.manager = manager;
 cube1_material = new THREE.MeshLambertMaterial({
-color:Math.random() * 0xffffff,shading:flat_shading
+color:Math.random() * 0xffffff,shading:flat_shading,
 	});
 cube1_material.manager = manager;
 		    camera_1 = 
