--- a/xss/production/test/wgl_text.html
+++ b/xss/production/test/wgl_text.html
@@ -58,7 +58,7 @@ var material_1;var camera_1;var __trackball_controls1;var light;var text_1;
 threejs_load_resources(manager, function()
 {
 material_1 = new THREE.MeshLambertMaterial({
-color:Math.random() * 0xffffff,shading:smooth_shading
+color:Math.random() * 0xffffff,shading:smooth_shading,
 	});
 material_1.manager = manager;
 		    camera_1 = 
