--- a/xss/production/test/wgl_head.html
+++ b/xss/production/test/wgl_head.html
@@ -6,7 +6,7 @@
 <body>
 <style type="text/css">
 	body{
-	background:#356;
+	background:black;
 	}
 </style>
             <script type="text/javascript" src="../js/resig.js"></script>
@@ -41,17 +41,59 @@ application.events = new ev.EventHolder();
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
             {
-		id:				"model_1",
+		id:				"res_model",
 		resource_type:	RESOURCE_JSON_MODEL,
-		src:			"model/monster/monster.js",
+		src:			"model/leeperrysmith/LeePerrySmith.js",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
 });	
-				var model_1;
+				var res_model;
 				global_package.events.addListener("loaded", function()
 				{
-					model_1 = streamer.get_resource("model_1");
+					res_model = streamer.get_resource("res_model");
+				});
+                global_package.add_item(
+            {
+		id:				"__image1",
+		resource_type:	RESOURCE_IMAGE,
+		src:			"model/leeperrysmith/Infinite-Level_02_Tangent_SmoothUV.jpg",
+		frame_width:	null,
+		frame_height:	null,
+		animations:		[]
+});	
+				var __image1;
+				global_package.events.addListener("loaded", function()
+				{
+					__image1 = streamer.get_resource("__image1");
+				});
+                global_package.add_item(
+            {
+		id:				"__image2",
+		resource_type:	RESOURCE_IMAGE,
+		src:			"model/leeperrysmith/Map-COL.jpg",
+		frame_width:	null,
+		frame_height:	null,
+		animations:		[]
+});	
+				var __image2;
+				global_package.events.addListener("loaded", function()
+				{
+					__image2 = streamer.get_resource("__image2");
+				});
+                global_package.add_item(
+            {
+		id:				"__image3",
+		resource_type:	RESOURCE_IMAGE,
+		src:			"model/leeperrysmith/Map-SPEC.jpg",
+		frame_width:	null,
+		frame_height:	null,
+		animations:		[]
+});	
+				var __image3;
+				global_package.events.addListener("loaded", function()
+				{
+					__image3 = streamer.get_resource("__image3");
 				});
 		global_package.add_item({
 			id:				"invalid_res",
@@ -81,60 +123,95 @@ manager.events.dispatch("update", [g_delta, g_elapsed]);
 				set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var material_wireframe;var camera_1;var a_ligth;var d_ligth_1;var monster_model;var plane_1;
+var shader_mat1;var camera_1;var a_ligth;var d_ligth_1;var head_model;
 threejs_load_resources(manager, function()
 {
-material_wireframe = new THREE.MeshBasicMaterial({
-color:blanchedalmond,wireframe:true,
-	});
-material_wireframe.manager = manager;
+		var shader_mat1_shader = THREE.ShaderUtils.lib[ "normal" ];
+		var shader_mat1_uniforms = THREE.UniformsUtils.clone( shader_mat1_shader.uniforms );
+			shader_mat1_uniforms[ 'tNormal' ]						
+				.texture = THREE.ImageUtils.loadTexture( manager.streamer.get_resource('model/leeperrysmith/Infinite-Level_02_Tangent_SmoothUV.jpg').asset )		
+			;
+			shader_mat1_uniforms[ 'uNormalScale' ]						
+				.value = -0.800000012
+			;
+			shader_mat1_uniforms[ 'tDiffuse' ]						
+				.texture = THREE.ImageUtils.loadTexture( manager.streamer.get_resource('model/leeperrysmith/Map-COL.jpg').asset )		
+			;
+			shader_mat1_uniforms[ 'tSpecular' ]						
+				.texture = THREE.ImageUtils.loadTexture( manager.streamer.get_resource('model/leeperrysmith/Map-SPEC.jpg').asset )		
+			;
+			shader_mat1_uniforms[ 'enableAO' ]						
+				.value = false
+			;
+			shader_mat1_uniforms[ 'enableDiffuse' ]						
+				.value = true
+			;
+			shader_mat1_uniforms[ 'enableSpecular' ]						
+				.value = true
+			;
+			shader_mat1_uniforms[ 'uDiffuseColor' ]						
+				.value = color(0xbbbbbb)
+			;
+			shader_mat1_uniforms[ 'uSpecularColor' ]						
+				.value = color(0x060606)
+			;
+			shader_mat1_uniforms[ 'uAmbientColor' ]						
+				.value = color(0x111111)
+			;
+			shader_mat1_uniforms[ 'uShininess' ]						
+				.value = 35
+			;
+			shader_mat1_uniforms[ 'wrapRGB' ]						
+				.value = vector3(0.575, 0.5, 0.5)
+			;
+	shader_mat1 = new THREE.ShaderMaterial({
+lights:true,
+		uniforms: shader_mat1_uniforms,
+		vertexShader: shader_mat1_shader.vertexShader,
+		fragmentShader: shader_mat1_shader.fragmentShader
+		});
+		shader_mat1.manager = manager;
 		    camera_1 = 
 		    new THREE.PerspectiveCamera(75, 1.5, 1, 10000, null) ;				
 camera_1.manager = manager;
 	    a_ligth = 
-	    new THREE.AmbientLight(2232576) ;
+	    new THREE.AmbientLight(ivory) ;
 	    manager.scene.add(a_ligth);
 a_ligth.manager = manager;
 	    d_ligth_1 = 
-	    new THREE.DirectionalLight(16772829, 1, 0, null) ;
+	    new THREE.DirectionalLight(white, 1, 0, null) ;
 	    manager.scene.add(d_ligth_1);
 d_ligth_1.manager = manager;
-	monster_model = new THREE.Object3D();
-	var monster_model_loader = 
-	generate_model_loader(manager.streamer.get_resource('model_1').type);
-		monster_model_loader.load(
-				manager.streamer.get_resource('model_1').asset , function( geometry )
+	head_model = new THREE.Object3D();
+	var head_model_loader = 
+	generate_model_loader(manager.streamer.get_resource('res_model').type);
+		head_model_loader.load(
+				manager.streamer.get_resource('res_model').asset , function( geometry )
 			{
-				var monster_model_mesh = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial());
-				monster_model.add(monster_model_mesh);
-            monster_model.position.x = -110;
-            monster_model.position.y = -350;
-            monster_model.position.z = -350;
-            monster_model.scale.x = 0.5;
-            monster_model.scale.y = 0.5;
-            monster_model.scale.z = 0.5;
-				manager.scene.add(monster_model);
+				var head_model_mesh = new THREE.Mesh(geometry, shader_mat1);
+				head_model.add(head_model_mesh);
+            if(1) geometry.computeTangents();
+            head_model.position.x = -110;
+            head_model.position.z = -350;
+            head_model.position.y = -20;
+            head_model.scale.x = 250;
+            head_model.scale.y = 250;
+            head_model.scale.z = 250;
+				manager.scene.add(head_model);
 			} 		
 	);
-	monster_model.events = new ev.EventHolder();
-monster_model.manager = manager;
-	    plane_1_plane = new THREE.PlaneGeometry(10000, 10000, 100, 100) ;
-	    plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
-	    manager.scene.add(plane_1);
-		plane_1.events = new ev.EventHolder();
-plane_1.manager = manager;
-            manager.events.addListener('update', function(){camera_1.lookAt(monster_model.position)});
+	head_model.events = new ev.EventHolder();
+head_model.manager = manager;
+            manager.events.addListener('update', function(){camera_1.lookAt(head_model.position)});
             camera_1.position.z = 1000;
             d_ligth_1.position.y = -70;
             d_ligth_1.position.z = 100;
-            plane_1.position.y = -500;
             application.mouse_x = null;
             application.mouse_y = null;
 	application.events.addListener("update", function()
 	{    
-		camera_1.position.x = camera_1.position.x + (application.mouse_x - camera_1.position.x) * 0.0500000007;
-camera_1.position.y = camera_1.position.y + (-application.mouse_y - camera_1.position.y) * 0.0500000007;
-set_rotation_y(monster_model.rotation, get_rotation_y(monster_model.rotation) + 1);
+		set_rotation_y(head_model.rotation, application.mouse_x * 0.300000012);
+set_rotation_x(head_model.rotation, application.mouse_y * 0.300000012);
 	}
 	);
 	application.events.addListener("mousemove", function(x,y)
