--- a/xss/production/test/wgl_materials.html
+++ b/xss/production/test/wgl_materials.html
@@ -77,18 +77,18 @@ var material_wireframe;var all_in_one;var material_sphere1;var material_sphere2;
 threejs_load_resources(manager, function()
 {
 material_wireframe = new THREE.MeshBasicMaterial({
-color:Ivory,wireframe:true
+color:Ivory,wireframe:true,
 	});
 material_wireframe.manager = manager;
 			    all_in_one = new Array() ;
 			all_in_one.manager = manager;
 material_sphere1 = new THREE.MeshLambertMaterial({
-color:0xdddddd,shading:flat_shading
+color:0xdddddd,shading:flat_shading,
 	});
 	all_in_one.push(material_sphere1);
 material_sphere1.manager = manager;
 material_sphere2 = new THREE.MeshPhongMaterial({
-color:0xdddddd,shading:flat_shading,shininess:30,specular:0x009900,ambient:0x030303
+color:0xdddddd,shading:flat_shading,shininess:30,specular:0x009900,ambient:0x030303,
 	});
 	all_in_one.push(material_sphere2);
 material_sphere2.manager = manager;
@@ -97,27 +97,27 @@ material_sphere3 = new THREE.MeshNormalMaterial({
 	all_in_one.push(material_sphere3);
 material_sphere3.manager = manager;
 material_sphere4 = new THREE.MeshBasicMaterial({
-color:0x665500,blending:additive_blending
+color:0x665500,blending:additive_blending,
 	});
 	all_in_one.push(material_sphere4);
 material_sphere4.manager = manager;
 material_sphere5 = new THREE.MeshLambertMaterial({
-color:0xdddddd,shading:smooth_shading
+color:0xdddddd,shading:smooth_shading,
 	});
 	all_in_one.push(material_sphere5);
 material_sphere5.manager = manager;
 material_sphere6 = new THREE.MeshPhongMaterial({
-color:0xdddddd,shading:smooth_shading,shininess:30,specular:0x009900,ambient:0x030303
+color:0xdddddd,shading:smooth_shading,shininess:30,specular:0x009900,ambient:0x030303,
 	});
 	all_in_one.push(material_sphere6);
 material_sphere6.manager = manager;
 material_sphere7 = new THREE.MeshNormalMaterial({
-shading:smooth_shading
+shading:smooth_shading,
 	});
 	all_in_one.push(material_sphere7);
 material_sphere7.manager = manager;
 material_sphere8 = new THREE.MeshBasicMaterial({
-color:0xffaa00,wireframe:true
+color:0xffaa00,wireframe:true,
 	});
 	all_in_one.push(material_sphere8);
 material_sphere8.manager = manager;
@@ -126,12 +126,12 @@ material_sphere9 = new THREE.MeshDepthMaterial({
 	all_in_one.push(material_sphere9);
 material_sphere9.manager = manager;
 material_sphere10 = new THREE.MeshLambertMaterial({
-color:MidnightBlue,shading:smooth_shading,ambient:Black,emissive:Grey
+color:MidnightBlue,shading:smooth_shading,ambient:Black,emissive:Grey,
 	});
 	all_in_one.push(material_sphere10);
 material_sphere10.manager = manager;
 material_particle = new THREE.MeshBasicMaterial({
-color:White
+color:White,
 	});
 material_particle.manager = manager;
 		    camera_1 = 
