--- a/xss/production/test/wgl_refraction_cube.html
+++ b/xss/production/test/wgl_refraction_cube.html
@@ -82,7 +82,7 @@ threejs_load_resources(manager, function()
 			t_cube1 = THREE.ImageUtils.loadTextureCube( urls, refraction_mapping);
 t_cube1.manager = manager;
 material_sphere1 = new THREE.MeshBasicMaterial({
-color:White,envMap:t_cube1,refractionRatio:0.949999988
+color:White,envMap:t_cube1,refractionRatio:0.949999988,
 	});
 material_sphere1.manager = manager;
 		    camera_1 = 
