--- a/xss/production/test/wgl_sound.html
+++ b/xss/production/test/wgl_sound.html
@@ -97,15 +97,15 @@ var material_sphere1;var material_sphere2;var material_wireframe;var light;var c
 threejs_load_resources(manager, function()
 {
 material_sphere1 = new THREE.MeshLambertMaterial({
-color:green,shading:flat_shading
+color:green,shading:flat_shading,
 	});
 material_sphere1.manager = manager;
 material_sphere2 = new THREE.MeshLambertMaterial({
-color:yellow,shading:flat_shading
+color:yellow,shading:flat_shading,
 	});
 material_sphere2.manager = manager;
 material_wireframe = new THREE.MeshLambertMaterial({
-color:mediumslateblue ,wireframe:true
+color:mediumslateblue ,wireframe:true,
 	});
 material_wireframe.manager = manager;
 	    light = 
