--- a/xss/production/test/jquery3.html
+++ b/xss/production/test/jquery3.html
@@ -27,7 +27,7 @@
 	<style>
 #__div1 {position : relative}
 #myMap {left : 100px;top : 10px;width : 300px;height : 300px;position : absolute}
-#__like_button1 {left : 500px;top : 10px;data-width : 300px;height : 300px;position : absolute}
+#__like_button1 {left : 500px;top : 10px;height : 300px;position : absolute}
     </style>
 </head>
 <body>
