--- a/xss/production/test/jquery6.html
+++ b/xss/production/test/jquery6.html
@@ -173,7 +173,7 @@ Released   : 20120325
 	<p>Copyright (c) 2012 Sitename.com. All rights reserved. Design by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
 </div>
 <!-- end #footer -->
-            <script type="text/javascript" src="../js/resig.js"></script>
+            <script type="text/javascript" src="../js/../js/resig.js"></script>
             <script type="text/javascript" src="../js/jquery-1.7.1.min.js"></script>
             <script type="text/javascript" src="../js/jquery-ui-1.8.18.custom.min.js"></script>
             <script type="text/javascript" src="../js/jquery-idiom.js"></script>
