--- a/xss/production/test/jsmanip.html
+++ b/xss/production/test/jsmanip.html
@@ -13,6 +13,7 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
+            <script type="text/javascript" src="../js/../js/resig.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/ui.js"></script>
