--- a/xss/production/test/jquery-webgl.html
+++ b/xss/production/test/jquery-webgl.html
@@ -17,6 +17,15 @@
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
             <script type="text/javascript" src="../js/three/fonts.js"></script>
+            <script type="text/javascript" src="../js/three/ShaderExtras.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/EffectComposer.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/RenderPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/ShaderPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/BloomPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/FilmPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/DotScreenPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/TexturePass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/MaskPass.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
         var application = {};
@@ -35,7 +44,6 @@ if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			renderer.domElement.height = renderer.domElement.offsetHeight;
 		var ui_;
 var canvas_position = {x:0, y:0};
-var active_camera;
 var g_elapsed;
 var g_delta;	
 var scene = new THREE.Scene();
@@ -100,7 +108,8 @@ color:blanchedalmond,wireframe:true,
 	});
 material_wireframe.manager = manager;
 		    camera_1 = 
-		    new THREE.PerspectiveCamera(75, 1.5, 1, 10000, null) ;				
+		    new THREE.PerspectiveCamera(75, 1.5, 1, 10000, null) ;	
+			manager.active_camera = camera_1;
 camera_1.manager = manager;
 	    a_ligth = 
 	    new THREE.AmbientLight(2232576) ;
