--- a/xss/production/test/jsmanipulate.html
+++ b/xss/production/test/jsmanipulate.html
@@ -207,6 +207,7 @@ Released   : 20120325
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
+            <script type="text/javascript" src="../js/../js/resig.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
             <script type="text/javascript" src="../js/jquery-1.7.1.min.js"></script>
             <script type="text/javascript" src="../js/jquery-ui-1.8.18.custom.min.js"></script>
