--- a/xss/production/test/wgl_icosahedron.html
+++ b/xss/production/test/wgl_icosahedron.html
@@ -18,12 +18,20 @@
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
             <script type="text/javascript" src="../js/three/fonts.js"></script>
+            <script type="text/javascript" src="../js/three/ShaderExtras.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/EffectComposer.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/RenderPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/ShaderPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/BloomPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/FilmPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/DotScreenPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/TexturePass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/MaskPass.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
 		var ui_;
 var canvas_position = {x:0, y:0};
-var active_camera;
 var g_elapsed;
 var g_delta;	
 var scene = new THREE.Scene();
@@ -100,7 +108,8 @@ map:THREE.ImageUtils.loadTexture(manager.streamer.get_resource('images/shadow.pn
 	});
 shadow_mat.manager = manager;
 		    camera_1 = 
-		    new THREE.PerspectiveCamera(40, 1.5, 1, 10000, null) ;				
+		    new THREE.PerspectiveCamera(40, 1.5, 1, 10000, null) ;	
+			manager.active_camera = camera_1;
 camera_1.manager = manager;
 	    icosahedron_1_icosahedron = new THREE.IcosahedronGeometry(1, null) ;
 	    icosahedron_1 = new THREE.Mesh(icosahedron_1_icosahedron, mat_1);
