--- a/xss/production/test/wgl_package.html
+++ b/xss/production/test/wgl_package.html
@@ -19,12 +19,20 @@
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
             <script type="text/javascript" src="../js/three/fonts.js"></script>
+            <script type="text/javascript" src="../js/three/ShaderExtras.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/EffectComposer.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/RenderPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/ShaderPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/BloomPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/FilmPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/DotScreenPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/TexturePass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/MaskPass.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
 		var ui_;
 var canvas_position = {x:0, y:0};
-var active_camera;
 var g_elapsed;
 var g_delta;	
 var scene = new THREE.Scene();
@@ -142,7 +150,8 @@ var camera_1;var plane_1;var plane_2;var plane_3;var container;var plane_4;var p
 threejs_load_resources(manager, function()
 {
 		    camera_1 = 
-		    new THREE.PerspectiveCamera(45, 1.5, 1, 10000, null) ;				
+		    new THREE.PerspectiveCamera(45, 1.5, 1, 10000, null) ;	
+			manager.active_camera = camera_1;
 camera_1.manager = manager;
 	    plane_1_plane = new THREE.PlaneGeometry(128, 164, 1, 1) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, new THREE.MeshBasicMaterial());
