--- a/xss/production/test/wgl_pp_embedded.html
+++ b/xss/production/test/wgl_pp_embedded.html
@@ -131,7 +131,7 @@ manager.events.dispatch("update", [g_delta, g_elapsed]);
 				set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var shader_mat1;var camera_1;var a_ligth;var d_ligth_1;var head_model;
+var shader_mat1;var camera_1;var a_ligth;var d_ligth_1;var head_model;var composer;var effect_bleach;var effect_color;var effect_fxaa;
 threejs_load_resources(manager, function()
 {
 		var shader_mat1_shader = THREE.ShaderUtils.lib[ "normal" ];
@@ -188,7 +188,7 @@ camera_1.manager = manager;
 	    manager.scene.add(a_ligth);
 a_ligth.manager = manager;
 	    d_ligth_1 = 
-	    new THREE.DirectionalLight(white, 1, 0, null) ;
+	    new THREE.DirectionalLight(white, 1.20000005, 0, null) ;
 	    manager.scene.add(d_ligth_1);
 d_ligth_1.manager = manager;
 	head_model = new THREE.Object3D();
@@ -200,8 +200,8 @@ d_ligth_1.manager = manager;
 				var head_model_mesh = new THREE.Mesh(geometry, shader_mat1);
 				head_model.add(head_model_mesh);
             if(1) geometry.computeTangents();
-            head_model.position.x = -110;
-            head_model.position.z = -350;
+            head_model.position.x = -300;
+            head_model.position.z = -400;
             head_model.position.y = -20;
             head_model.scale.x = 250;
             head_model.scale.y = 250;
@@ -211,22 +211,46 @@ d_ligth_1.manager = manager;
 	);
 	head_model.events = new ev.EventHolder();
 head_model.manager = manager;
+		var renderModel = new THREE.RenderPass( scene, manager.active_camera );
+		composer = new THREE.EffectComposer( renderer );
+		composer.addPass( renderModel );
+		manager.active_composer = composer;
+	composer.manager = manager;
+		effect_bleach = new THREE.ShaderPass( THREE.ShaderExtras[ "bleachbypass" ] );
+			effect_bleach.uniforms[ 'opacity' ]						
+				.value = 0.400000006
+			;
+		composer.addPass( effect_bleach );	
+	effect_bleach.manager = manager;
+		effect_color = new THREE.ShaderPass( THREE.ShaderExtras[ "colorCorrection" ] );
+			effect_color.uniforms[ 'powRGB' ]						
+				.value = vector3(1.4, 1.45, 1.45)
+			;
+			effect_color.uniforms[ 'mulRGB' ]						
+				.value = vector3(1.1, 1.1, 1.1)
+			;
+		composer.addPass( effect_color );	
+	effect_color.manager = manager;
+		effect_fxaa = new THREE.ShaderPass( THREE.ShaderExtras[ "fxaa" ] );
+			effect_fxaa.uniforms[ 'resolution' ]						
+				.value = vector3(1/app_width, 1/app_height)
+			;
+		composer.addPass( effect_fxaa );	
+	effect_fxaa.manager = manager;
             manager.events.addListener('update', function(){camera_1.lookAt(head_model.position)});
             camera_1.position.z = 1000;
             d_ligth_1.position.y = -70;
             d_ligth_1.position.z = 100;
-            application.mouse_x = null;
-            application.mouse_y = null;
+            effect_fxaa.renderToScreen = true;
 	application.events.addListener("update", function()
 	{    
-		set_rotation_y(head_model.rotation, application.mouse_x * 0.300000012);
-set_rotation_x(head_model.rotation, application.mouse_y * 0.300000012);
-	}
-	);
-	application.events.addListener("mousemove", function(x,y)
-	{    
-		application.mouse_x = x - app_width / 2;
-application.mouse_y = y - app_height / 2;
+		set_rotation_y(head_model.rotation, get_rotation_y(head_model.rotation) + 0.300000012);
+if (host.needs_update)
+{
+effect_bleach.enabled = host.bleachenabled;
+effect_color.enabled = host.colorenabled;
+host.needs_update = false;
+}
 	}
 	);
 var event_manager = new ev.ThreeEventManager();
