--- a/xss/production/test/wgl_shader.html
+++ b/xss/production/test/wgl_shader.html
@@ -86,12 +86,20 @@ void main(void)
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
             <script type="text/javascript" src="../js/three/fonts.js"></script>
+            <script type="text/javascript" src="../js/three/ShaderExtras.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/EffectComposer.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/RenderPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/ShaderPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/BloomPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/FilmPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/DotScreenPass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/TexturePass.js"></script>
+            <script type="text/javascript" src="../js/three/postprocessing/MaskPass.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
 		var ui_;
 var canvas_position = {x:0, y:0};
-var active_camera;
 var g_elapsed;
 var g_delta;	
 var scene = new THREE.Scene();
@@ -188,7 +196,8 @@ threejs_load_resources(manager, function()
 		});
 		shader_mat2.manager = manager;
 		    camera_1 = 
-		    new THREE.PerspectiveCamera(70, 1.5, 1, 1000, null) ;				
+		    new THREE.PerspectiveCamera(70, 1.5, 1, 1000, null) ;	
+			manager.active_camera = camera_1;
 camera_1.manager = manager;
 	    cube_1_cube = new THREE.CubeGeometry(200, 200, 200, 1, 1, 1, null, null) ;
 	    cube_1 = new THREE.Mesh(cube_1_cube, shader_mat2);
